--- a/IceJamsAgent/IceJamsAgent.csproj
+++ b/IceJamsAgent/IceJamsAgent.csproj
@@ -5,12 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
-    <PackageReference Include="WiM.Resources" Version="1.1.1" />
+    <Compile Remove="Resources\**" />
+    <EmbeddedResource Remove="Resources\**" />
+    <None Remove="Resources\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
+    <PackageReference Include="WiM.Resources" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
