--- a/IceJamsDB/IceJamsDB.csproj
+++ b/IceJamsDB/IceJamsDB.csproj
@@ -10,7 +10,8 @@
     <Compile Remove="Logger\LoggerProvider.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="2.1.1" />
     <PackageReference Include="WiM.DBUtilities" Version="1.1.1" />
