--- a/IceJamsAgent/IceJamsAgent.csproj
+++ b/IceJamsAgent/IceJamsAgent.csproj
@@ -1,18 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Resources\**" />
-    <EmbeddedResource Remove="Resources\**" />
-    <None Remove="Resources\**" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
+    <PackageReference Include="WiM.DBUtilities" Version="1.1.1" />
+    <PackageReference Include="WiM.Resources" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
-    <PackageReference Include="WiM.Resources" Version="1.1.1" />
+    <ProjectReference Include="..\IceJamsDB\IceJamsDB.csproj" />
   </ItemGroup>
 
 </Project>
