--- a/IceJamsServices/appsettings.json
+++ b/IceJamsServices/appsettings.json
@@ -3,7 +3,7 @@
   "dbpassword": null,
   "dbHost": null,
   "ConnectionStrings": {
-    "wateruseConnection": "User ID={0};Password={1};Host={2};Port=5432;Database=wateruse;Pooling=true;"
+    "wateruseConnection": "User ID={0};Password={1};Host={2};Port=5432;Database=icejam;Pooling=true;"
   },
   "AnalyticsKey": "",
   "APIConfigSettings": {
