--- a/IceJamsServices/appsettings.json
+++ b/IceJamsServices/appsettings.json
@@ -3,22 +3,63 @@
   "dbpassword": null,
   "dbHost": null,
   "ConnectionStrings": {
-    "wateruseConnection": "User ID={0};Password={1};Host={2};Port=5432;Database=icejam;Pooling=true;"
+    "IceJamsConnection": "User ID={0};Password={1};Host={2};Port=5432;Database=icejam;Pooling=true;"
   },
   "AnalyticsKey": "",
   "APIConfigSettings": {
     "Resources": {
-      "IceJams": {
-        "Description": { "string": "raw icejams example" },
+      "Agencies": {
+        "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Agencies/summary.md" },
         "uris": {
-          "/": {
-            "Name": "example",
-            "Description": { "string": "example method" }
+          "GET": {
+            "/": {
+              "Name": "All Agencies",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Agencies/CompleteList.md" }
+            },
+            "/{id}": {
+              "Name": "Agency",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Agencies/Distinct.md" }
+            }
+          },
+          "POST": {
+            "/": {
+              "Name": "Add an Agency",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Agencies/Add.md" },
+              "RequiresAuthentication": true
+            },
+            "/Batch": {
+              "Name": "Batch Upload",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Agencies/Batch.md" },
+              "RequiresAuthentication": true
+            }
+          },
+          "PUT": {
+            "/{id}": {
+              "Name": "Edit an Agency",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Agencies/Edit.md" },
+              "RequiresAuthentication": true
+            }
+          },
+          "DELETE": {
+            "/{id}": {
+              "Name": "Delete an Agency",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Agencies/Delete.md" },
+              "RequiresAuthentication": true
+            }
           }
         }
       }
     },
     "Parameters": {
+      "id": {
+        "Description": "Unique identifier, used for identifying unique resource."
+      },
+      "entities": {
+        "Description": "List of entities for request."
+      },
+      "entity": {
+        "Description": "entity for request."
+      }
     }
   },
   "Logging": {
