--- a/IceJamsServices/Properties/launchSettings.json
+++ b/IceJamsServices/Properties/launchSettings.json
@@ -13,6 +13,11 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}"
     }
   }
 }
