changed event to sitevisit

--- a/IceJamsServices/appsettings.json
+++ b/IceJamsServices/appsettings.json
@@ -90,42 +90,42 @@
           }
         }
       },
-      "Events": {
-        "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Events/summary.md" },
+      "SiteVisits": {
+        "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/SiteVisits/summary.md" },
         "uris": {
           "GET": {
             "/": {
-              "Name": "All Events",
-              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Events/CompleteList.md" }
+              "Name": "All SiteVisits",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/SiteVisits/CompleteList.md" }
             },
             "/{id}": {
-              "Name": "Event",
-              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Events/Distinct.md" }
+              "Name": "SiteVisit",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/SiteVisits/Distinct.md" }
             }
           },
           "POST": {
             "/": {
-              "Name": "Add an Events",
-              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Events/Add.md" },
+              "Name": "Add an SiteVisits",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/SiteVisits/Add.md" },
               "RequiresAuthentication": true
             },
             "/Batch": {
               "Name": "Batch Upload",
-              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Events/Batch.md" },
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/SiteVisits/Batch.md" },
               "RequiresAuthentication": true
             }
           },
           "PUT": {
             "/{id}": {
-              "Name": "Edit a Events",
-              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Events/Edit.md" },
+              "Name": "Edit a SiteVisit",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/SiteVisits/Edit.md" },
               "RequiresAuthentication": true
             }
           },
           "DELETE": {
             "/{id}": {
-              "Name": "Delete a Events",
-              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/Events/Delete.md" },
+              "Name": "Delete a SiteVisit",
+              "Description": { "link": "https://raw.githubusercontent.com/USGS-WiM/IceJamsservices/staging/Docs/SiteVisits/Delete.md" },
               "RequiresAuthentication": true
             }
           }
